2008-02-20  J. Tang  <jtang@tresys.com>

	* This is the official release of SETools 3.3.3.

2008-02-19  J. Tang  <jtang@tresys.com>

	* Added QPOL_POLICY_OPTION_MATCH_SYSTEM as a policy load option to
	qpol_policy_open_from_file().  The tools seinfo, sesearch, and
	sechecker will now use this flag when loading the system's default
	policy.

	* Modified libqpol to understand version 22 policy.  Added
	QPOL_CAP_POLCAPS to qpol_capability enum.

2008-02-15  J. Tang  <jtang@tresys.com>

	* Synced libqpol to libsepol version 2.0.20.  The configure script
	will check if dynamic avtabs exist (introduced in libsepol 2.0.20)
	and will adjust policy loading as necessary.

2008-01-09  J. Tang  <jtang@tresys.com>

	* Added initial attempt at Debian-izing SETools.  The Debian
	control files are only present in the SVN checkout of SETools, not
	in the distributed tarball.

2007-11-02  J. Tang  <jtang@tresys.com>

	* Ported bug fixes in branches/setools-devel to trunk.  This is
	the official release of SETools 3.3.2.

	* Fixed error in libsefs/Java where the library has not been built
	correctly since version 4 of libsefs.

2007-10-31  J. Mowery  <jmowery@tresys.com>

	* Fix to libqpol when querying policies with no genfscon statements.

	* Fix to SWIG wrappers to correctly report exceptions in multi-threaded
	  Java environments.

2007-10-31  J. Tang  <jtang@tresys.com>

	* Modifed libqpol to explicitly ignore disabled aliases.

	* Merged RedHat's spec file changes.

2007-10-08  J. Tang  <jtang@tresys.com>

	* Fix to libqpol when qpol_type_get_alias_iter() could erroneously
	be set to an initially wrong position for certain primary types.

2007-10-02  J. Tang  <jtang@tresys.com>

	* Fix to libqpol to synthesize object_r.  This was previously
	(erroneously) handled in libapol.

2007-09-26  J. Tang  <jtang@tresys.com>

	* Fix to apol where empty levels would throw an error during
	validation.

2007-09-04  J. Mowery  <jmowery@tresys.com>
